<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyPsswrdSecure</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="home_second">Home Second</string>
    <string name="whatsTheNameOfYourFirstPet">What\'s the name of your first pet?</string>
    <string name="whatWasTheModelOfYourFirstCar">What was the model of your first car?</string>
    <string name="whatsYourGrannysName">What\'s your Granny\'s name?</string>
    <string name="whereDidYouGetMarried">Where did you get married</string>
    <string name="whatsYourMothersMaidenName">What\'s your mother\'s maiden name?</string>
    <string name="whatsTheNameOfTheTownWhereYouWereBorn">What\'s the name of the town where you were born?</string>
    <string name="whichPhoneNumberDoYouRememberMostFromChildhood">Which phone number do you remember most from your childhood?</string>
    <string name="whatStreetDidYouGrowUpOn">What street did you grow up on?</string>
    <string name="whatIsTheNameOfYourFirstSchool">What is the name of your first school?</string>
    <string name="whatsYourFathersMiddleName">What is your father\'s middle name?</string>
    <string name="SocialMedia">Social Media</string>
    <string name="Entertainment">Entertainment</string>
    <string name="Communication">Communication</string>
    <string name="Internet">Internet</string>
    <string name="Shopping">Shopping</string>
    <string name="Travel">Travel</string>
    <string name="Learning">Learning</string>
    <string name="Food">Food</string>
    <string name="Finance">Finance</string>
    <string name="Insurance">Insurance</string>
    <string name="JobHunting">Job Hunting</string>
    <string name="Utilities">Utilities</string>
    <string name="Work">Work</string>
    <string name="about">About...</string>
    <string name="action_search">Search</string>
    <string name="action_accounts">Account</string>
    <string name="action_userNames">User names</string>
    <string name="action_userName">User name</string>
    <string name="action_psswrds">Passwords</string>
    <string name="action_psswrd">Password</string>
    <string name="action_secQuestions">Security questions</string>
    <string name="action_secQuestion">Security question</string>
    <string name="account_logo">Logo</string>
    <string name="account_name">Name:</string>
    <string name="account_cat">Category:</string>
    <string name="account_userName">User name:</string>
    <string name="account_psswrd">Password:</string>
    <string name="account_secQuestion">Security questions:</string>
    <string name="account_isFavoriteChecked">Uncheck as favorite</string>
    <string name="account_isFavoriteUnchecked">Check as favorite</string>
    <string name="account_new">New</string>
    <string name="account_addQuestion">Add to list</string>
    <string name="account_dateCreated">Date created:</string>
    <string name="account_changePsswrd">Needs update?</string>
    <string name="account_dateChange">Change date:</string>
    <string name="account_nameHint">Type the account name</string>
    <string name="account_removeQuestion">Delete</string>
    <string name="question_spinner_answer">Answ:</string>
    <string name="account_quest_avilab_spinner_prompt">Add a question to your list...</string>
    <string name="account_quest_avilab_noAnswers">No Answers available</string>
    <string name="account_quest_list_spinner_prompt">No questions...</string>
    <string name="account_quest_list_spinner_prompt1">Security list has </string>
    <string name="account_quest_list_spinner_prompt2"> question...</string>
    <string name="account_quest_list_spinner_prompt3"> questions...</string>
    <string name="question_list_q1">Question:</string>
    <string name="question_list_q2">Question 2:</string>
    <string name="question_list_q3">Question 3:</string>
    <string name="question_list_answer">Answer:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="dialog_OK">Ok</string>
    <string name="delete">Delete</string>
    <string name="addLogoTitle">Select Logo</string>
    <string name="logo_list_header">Pick a logo for your account:</string>
    <string name="strVal_times_used">Times used:</string>
    <string name="strVal_date_created">Created on:</string>
    <string name="addAccTitle">Add Account</string>
    <string name="addEditAccName">Enter the account name...</string>
    <string name="selectCatHint">Select a Category...</string>
    <string name="selectUserHint">Select a User name...</string>
    <string name="selectPsswrdHint">Select a Password...</string>
    <string name="accountEmptyName">Sorry, no account name entered in the Name field</string>
    <string name="accountNameInUse">Sorry, the account name entered is already in use</string>
    <string name="accountRenewDateInPast">Sorry, invalid password renew date. The date must be in the future</string>
    <string name="accountNoCatSelected">Sorry, no category has been selected from the drop down menu</string>
    <string name="accountNoUserSelected">Sorry, no user name has been selected from the drop down menu</string>
    <string name="accountNoPsswrdSelected">Sorry, no password has been selected from the drop down menu</string>
    <string name="accountAdded"> account has been added to your list!</string>
    <string name="accountRepeatQuestion">This question is in the list already</string>
    <string name="editAccTitle">Edit Account</string>
    <string name="accountNotChanged">Sorry, the account attributes have not been changed. Please, updated one of the values at least</string>
    <string name="accountUpdated"> account has been updated!</string>
    <string name="accountUpdateError">Sorry, the DB failed to record the changes in the account!</string>
    <string name="accountDeleteTitle">Delete account</string>
    <string name="accountDeleteMssg">Are you sure you want to delete this account?</string>
    <string name="accountDeleted"> account has been deleted!</string>
    <string name="addUserTitle">Add User Name</string>
    <string name="userNameAdded">user name added successfully!</string>
    <string name="userNameNotEntered">Sorry, no user name entered in the input field</string>
    <string name="editUserTitle">Edit User name</string>
    <string name="userNameNotChanged">Sorry, the user name value has not been changed</string>
    <string name="userNameUpdated">user name has been updated</string>
    <string name="userNameDeleted"> user name has been deleted</string>
    <string name="userNameDeleteTitle">Delete user name</string>
    <string name="userNameDeleteMssg">Are you sure you want to delete this user name?</string>
    <string name="addPsswrdTitle">Add Password</string>
    <string name="psswrdAdded">password added successfully!</string>
    <string name="psswrdNotEntered">Sorry, no password entered in the input field</string>
    <string name="editPsswrdTitle">Edit Password</string>
    <string name="psswrdNotChanged">Sorry, the password value has not been changed</string>
    <string name="psswrdUpdated">password has been updated</string>
    <string name="psswrdDeleted">password has been deleted</string>
    <string name="psswrdDeleteTitle">Delete password</string>
    <string name="psswrdDeleteMssg">Are you sure you want to delete this password?</string>
    <string name="addQuestTitle">Add Question</string>
    <string name="addQuestQuestionTag">Security question</string>
    <string name="addQuestQuestionHint">Type the new question here...</string>
    <string name="addQuestAnswerHint">Type the new answer here...</string>
    <string name="questionAdded">question added successfully!</string>
    <string name="questionNotEntered">Sorry, no question entered in the input field</string>
    <string name="answerNotEntered">Sorry, no answer entered in the input field</string>
    <string name="editQuestTitle">Edit Question</string>
    <string name="answerNoTChanged">Sorry, the answer value has not been changed</string>
    <string name="questionAnswerNoTChanged">Sorry, at least one value must be changed (question or answer)</string>
    <string name="questionUpdated">question has been updated</string>
    <string name="questionDeleted">question has been deleted</string>
    <string name="questionDeleteTitle">Delete security question</string>
    <string name="questionDeleteMssg">Are you sure you want to delete this question?</string>
    <string name="addCatTitle">Add Category</string>
    <string name="catAdded">category added successfully!</string>
    <string name="catNotEntered">Sorry, no category entered in the input field</string>
    <string name="catExists">Sorry, the category already exists</string>
    <string name="catNotAdded">Sorry, the category was not saved</string>
    <string name="editCatTitle">Edit Category</string>
    <string name="editCategoryTitle">Select category to edit:</string>
    <string name="catNotChanged">Sorry, the category has not been changed</string>
    <string name="categoryAndIconNoTChanged">Sorry, at least one value must be changed (category name or icon)</string>
    <string name="catUpdated">category has been updated</string>
    <string name="catDeleted">category has been deleted</string>
    <string name="alertBoxNewUserMssg">Please, enter a new user name</string>
    <string name="action_sort">Sort</string>
    <string name="appPreferences">App Preferences</string>
    <string name="appThemeSelection">App colour theme</string>
    <string name="appThemeDescription">Select the colour combination for your app</string>
    <string name="changeLang">Language</string>
    <string name="changeLangDescription">Change the app language</string>
    <string name="jlrodsWeb" tools:ignore="MissingTranslation"><a href="https://jlrods.github.io/">https://www.jlrods.com</a></string>
    <string name="downloads"><a href="https://jlrods.github.io/Downloads.html">Click here!</a></string>
    <string name="authorEmail" tools:ignore="MissingTranslation"><a href="https://jlrods.github.io/Downloads.html">jlrods@gmail.com</a></string>
    <string name="targetApi">Target API:</string>
    <string name="targetApiValue" tools:ignore="MissingTranslation">29 - Android 10</string>
    <string name="minRequiredApi">Min. required API:</string>
    <string name="minReqApiValue" tools:ignore="MissingTranslation">19 - KitKat</string>
    <string name="appVersion" >Version:</string>
    <string name="appVersionValue" tools:ignore="MissingTranslation">V1.0.0.0</string>
    <string name="aboutAuthorTag">About the author</string>
    <string name="appPropertyOf">Property of:</string>
    <string name="author" tools:ignore="MissingTranslation">@jlrods ™</string>
    <string name="email" tools:ignore="MissingTranslation">E-mail:</string>
    <string name="visitWebsiteTag">Visit our website:</string>
    <string name="moreAppsTag">For more apps:</string>
    <string name="softwareInfoTitle">Software information</string>
    <string name="prompt_enterUserID">Enter your user name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_passwordConfirm">Confirm password</string>
    <string name="prompt_enterUserName">Enter your name</string>
    <string name="prompt_userMssg">Type your custom message</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="signUp"><a href="">Sign Up?</a></string>
</resources>