<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvSwInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/softwareInfoTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="25dp"/>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:text="@string/targetApi"
                android:layout_weight="0.5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:text="@string/targetApiValue"
                android:layout_weight="0.5"
                android:gravity="right"
                android:textAlignment="gravity"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:text="@string/minRequiredApi"
                android:layout_weight="0.5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:text="@string/minReqApiValue"
                android:gravity="right"
                android:layout_weight="0.5"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:text="@string/appVersion"
                    android:layout_weight="0.5"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:gravity="right"
                    android:text="@string/appVersionValue"
                    android:layout_weight="0.5"/>
            </LinearLayout>
        <TextView
            android:id="@+id/tvAboutAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutAuthorTag"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="25dp" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:text="@string/appPropertyOf"
                android:layout_weight="0.50"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:gravity="right"
                android:text="@string/author"
                android:layout_weight="0.50"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:text="@string/email"
                android:layout_weight="0.5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:gravity="right"
                android:text="@string/authorEmail"
                android:autoLink="email"
                android:layout_weight="0.5"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:text="@string/visitWebsiteTag" />
            <TextView
                android:id="@+id/tvAuthorWebsite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:layout_marginTop="5dp"
                android:text="@string/jlrodsWeb"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:text="@string/moreAppsTag"
                android:layout_weight="0.5"/>

            <TextView
                android:id="@+id/tvAuthorWebsiteDownloads"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:gravity="right"
                android:layout_weight="0.5"
                android:text="@string/downloads" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>