<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="400"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="Logout"
        app:showAsAction="ifRoom"
        android:iconTint="@color/whiteBackground"/>
    <item
        android:id="@+id/action_applogin"
        android:orderInCategory="300"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="App Login"
        app:showAsAction="ifRoom"
        android:iconTint="@color/whiteBackground"/>
    <item
        android:id="@+id/action_import_export"
        android:orderInCategory="250"
        android:icon="@android:drawable/ic_menu_send"
        android:title="Import - Export"
        app:showAsAction="ifRoom"
        android:iconTint="@color/whiteBackground"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about"
        app:showAsAction="ifRoom"
        android:iconTint="@color/whiteBackground"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="ifRoom"
        android:iconTint="@color/whiteBackground"/>
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="50"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom"
        android:iconTint="@color/whiteBackground"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="10"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        android:iconTint="@color/whiteBackground"/>
</menu>
