<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayoutAddUserAct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linLayoutMainQuestionList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:id="@+id/subLayout_secQuestionHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgAddActivityIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_account_black_48dp" />
            <TextView
                android:id="@+id/tvAddActivityTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_userName"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/subLayout_secQuestionList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/subLayout_secQuestion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSecQuestionTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/question_list_q1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/etNewItemField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:hint="@string/alertBoxNewUserMssg"/>
                <LinearLayout
                    android:id="@+id/layout_add_item_answer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible">
                    <TextView
                        android:id="@+id/tvSecQuestionAnswTag"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="40dp"
                        android:gravity="center"
                        android:text="@string/question_list_answer"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                    <EditText
                        android:id="@+id/etAnswer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="40dp"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:hint="@string/addQuestAnswerHint"/>
                </LinearLayout>
            </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>